--- a/index/stylesheet.css
+++ b/index/stylesheet.css
@@ -1,7 +1,35 @@
-.container {
-    display:flex;
-    align-items: center;
-    flex-direction: column;
+body {
+    background-color: #59D5E0;
+    
 }
 
+.background {
+    background-color: #fff;
+    width: 80%;
+    border-radius: 20px;
+    
+    padding: 5%;
+    margin: auto;
+}
+
+.container {
+    display: grid;
+    grid-template-rows: 2fr 1fr;
+    grid-template-columns: 1fr 1fr;
+}
+
+.canvas {
+    grid-column: 1/2;
+    grid-row: 1/3;
+}
+
+.explanation {
+    grid-column: 2/3;
+    grid-row: 1/2;
+}
+
+.form {
+    grid-column: 2/3;
+    grid-row: 2/3;
+}
 
