--- a/index/stylesheet.css
+++ b/index/stylesheet.css
@@ -1,6 +1,13 @@
 body {
     background-color: #59D5E0;
     
+    font-family: 'Noto Sans JP', sans-serif;
+}
+
+.title {
+    padding-top: 3%;
+    padding-bottom: 3%;
+    padding-left: 7%;
 }
 
 .background {
@@ -14,22 +21,36 @@ body {
 
 .container {
     display: grid;
-    grid-template-rows: 2fr 1fr;
+    grid-template-rows: 1fr 1fr;
     grid-template-columns: 1fr 1fr;
 }
 
 .canvas {
     grid-column: 1/2;
     grid-row: 1/3;
+
+    padding: 3%;
 }
 
 .explanation {
     grid-column: 2/3;
     grid-row: 1/2;
+
+    padding: 3%;
 }
 
-.form {
+.explanation h2 {
+    font-family: "FOT-ラグランパンチ Std UB";
+}
+
+.quiz {
     grid-column: 2/3;
     grid-row: 2/3;
+
+    padding: 3%;
+}
+
+.quiz h2 {
+    font-family: "FOT-ラグランパンチ Std UB";
 }
 
